--- a/Transfer.Web/wwwroot/css/Carrier/carrier-info.css
+++ b/Transfer.Web/wwwroot/css/Carrier/carrier-info.css
@@ -1,11 +1,4 @@
-﻿.r-logo img {
-    height: 140px;
-    width: auto;
-    border: 0;
-    padding: 0;
-    margin: 18px 0;
-}
-
+﻿
 .carrier-info {
     border-radius: 18px;
     background-color: #f8fafb;
