--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -91,7 +91,7 @@
             {
                 <i class="fas fa-lock"></i>
             }
-            <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id"><span style="font-size: 1.2rem;">@c.Name</span></a> <i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="far fa-star fs-sm"></i><i class="far fa-star fs-sm"></i>
+            <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id" class="dark-link-basic"><span style="font-size: 1.2rem;">@c.Name</span></a> <i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="far fa-star fs-sm"></i><i class="far fa-star fs-sm"></i>
         </div>
     </div>
     <div class="row blank-row"></div>
