--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -2,20 +2,47 @@
 @using Transfer.Common.Extensions
 
 @section Styles {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 }
 
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script language="javascript">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script language="javascript">
         $.fn.fileinputBsVersion = "3.3.7";
 
-        $(() => {
-            $("#input-id").fileinput(
+        function DeleteFile(elem) {
+            let row = $(elem).closest('.form-row');
+            row.find('.file-upl').removeClass("d-none");
+            row.find('.file-dwn').addClass("d-none");
+        }
 
-            );
+
+        $(() => {
+            let $el1 = $("#input-id");
+
+        $el1.fileinput({
+            browseClass: "button-one",
+            showPreview: false,
+            showCaption: false,
+            showRemove: false,
+            showUpload: false,
+            showCancel: false,
+            browseLabel: "Загрузить",
+            uploadUrl: "/File/UploadAnyFile",
+            uploadAsync: true,
+            layoutTemplates: {progress: ''},
+            allowedFileExtensions: ["jpg", "png", "gif"],
+        }).on("filebatchselected", function (event, files) {
+            $el1.fileinput("upload");
+        }).on('fileuploaded', function(event, data, previewId, index, fileId) {
+            if(data.jqXHR.status == 200)
+            {
+                $el1.closest('.form-row').find('.file-result-name').val(data.response.fileName);
+                $el1.closest('.form-row').find('.file-result-id').val(data.response.fileId);
+            }
         });
-    </script>
+    });
+</script>
 }
 
 <div class="container">
@@ -182,22 +209,24 @@
             </div>
             <div class="row blank-row"></div>
             <div class="row form-row">
-                <div class="t-col col-12 col-md-8">
+                <input asp-for="OsagoFileId" type="hidden" class="form-control file-result-id">
+                <div class="t-col file-upl col-12 @(!Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     <div class="row">
                         <div class="t-col col-12 white-text">
                             ОСАГО: <span class="red-text">*</span>
-                            @if(!Model.OsagoFileId.IsNullOrEmpty())
-                            {
-                                @($" ({Model.OsagoFileId})")
-                            }
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-12 form-group">
-                            <input asp-for="OsagoFile" type="file" class="form-control" id="input-id">
-                            @*<input asp-for="OsagoFileId" type="text" class="form-control">*@
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control" id="input-id">
                         </div>
                     </div>
+                </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    Полис ОСАГО: <a href="/File/GetFile?fileId=@Model.OsagoFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
                 </div>
             </div>
             <div class="row blank-row"></div>
