--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -7,42 +7,7 @@
 
 @section Scripts {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script language="javascript">
-        $.fn.fileinputBsVersion = "3.3.7";
-
-        function DeleteFile(elem) {
-            let row = $(elem).closest('.form-row');
-            row.find('.file-upl').removeClass("d-none");
-            row.find('.file-dwn').addClass("d-none");
-        }
-
-
-        $(() => {
-            let $el1 = $("#input-id");
-
-        $el1.fileinput({
-            browseClass: "button-one",
-            showPreview: false,
-            showCaption: false,
-            showRemove: false,
-            showUpload: false,
-            showCancel: false,
-            browseLabel: "Загрузить",
-            uploadUrl: "/File/UploadAnyFile",
-            uploadAsync: true,
-            layoutTemplates: {progress: ''},
-            allowedFileExtensions: ["jpg", "png", "gif"],
-        }).on("filebatchselected", function (event, files) {
-            $el1.fileinput("upload");
-        }).on('fileuploaded', function(event, data, previewId, index, fileId) {
-            if(data.jqXHR.status == 200)
-            {
-                $el1.closest('.form-row').find('.file-result-name').val(data.response.fileName);
-                $el1.closest('.form-row').find('.file-result-id').val(data.response.fileId);
-            }
-        });
-    });
-</script>
+<script src="~/js/Bus/Save.js" crossorigin="anonymous"></script>
 }
 
 <div class="container">
