--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="row blank-row"></div>
-    <form asp-controller="Bus" asp-action="Save" method="post" enctype="multipart/form-data">
+    <form asp-controller="Bus" asp-action="Save" method="post" id="mainSaveForm">
         @Html.AntiForgeryToken()
         @Html.HiddenFor(x => x.Id)
         @Html.HiddenFor(x => x.LastUpdateTick)
@@ -174,8 +174,29 @@
             </div>
             <div class="row blank-row"></div>
             <div class="row form-row">
+                <input asp-for="RegFileId" type="hidden" class="form-control file-result-id">
+                <div class="t-col file-upl col-12 col-md-8 @(!Model.RegFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            СТС: <span class="red-text">*</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control input-file">
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.RegFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    СТС: <a href="/File/GetFile?fileId=@Model.RegFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+            </div>
+            <div class="row form-row">
                 <input asp-for="OsagoFileId" type="hidden" class="form-control file-result-id">
-                <div class="t-col file-upl col-12 @(!Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                <div class="t-col file-upl col-12 col-md-8 @(!Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     <div class="row">
                         <div class="t-col col-12 white-text">
                             ОСАГО: <span class="red-text">*</span>
@@ -186,12 +207,75 @@
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
                         <div class="t-col col-2 form-group">
-                            <input type="file" class="form-control" id="input-id">
+                            <input type="file" class="form-control input-file">
                         </div>
                     </div>
                 </div>
                 <div class="t-col file-dwn white-text col-12 form-group @(Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     Полис ОСАГО: <a href="/File/GetFile?fileId=@Model.OsagoFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+            </div>
+            <div class="row form-row">
+                <input asp-for="ToFileId" type="hidden" class="form-control file-result-id">
+                <div class="t-col file-upl col-12 col-md-8 @(!Model.ToFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Талон техосмотра: <span class="red-text">*</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control input-file">
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.ToFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    Талон техосмотра: <a href="/File/GetFile?fileId=@Model.ToFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+            </div>
+            <div class="row form-row">
+                <input asp-for="OsgopFileId" type="hidden" class="form-control file-result-id">
+                <div class="t-col file-upl col-12 col-md-8 @(!Model.OsgopFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            ОСГОП: <span class="red-text">*</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control input-file">
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.OsgopFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    ОСГОП: <a href="/File/GetFile?fileId=@Model.OsgopFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+            </div>
+            <div class="row form-row">
+                <input asp-for="TahografFileId" type="hidden" class="form-control file-result-id">
+                <div class="t-col file-upl col-12 col-md-8 @(!Model.TahografFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Калибровка тахографа: <span class="red-text">*</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control input-file">
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.TahografFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    Калибровка тахографа: <a href="/File/GetFile?fileId=@Model.TahografFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
                 </div>
             </div>
             <div class="row blank-row"></div>
