--- a/Transfer.Web/Views/Carrier/Assets.cshtml
+++ b/Transfer.Web/Views/Carrier/Assets.cshtml
@@ -53,7 +53,7 @@
                     }
                     else
                     {
-                        <div class="col-12 r-logo text-center"><img alt="" src='@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )' /></div>
+                        <div class="col-12 r-logo text-center" style="border: solid 1px #0f4c71; height: 224px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
                     }
                 </div>
             </div>
